<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/actionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etActionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_action_description"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etDurationMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnSaveAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_action" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnDeleteAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_action" />

</LinearLayout>