<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvRoutineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Routine Example"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etRoutineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_routine_name"/>

        <Button
            android:id="@+id/btnTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/containerButtonAction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:id="@+id/btnNewAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_action"/>

            <Button
                android:id="@+id/btnSaveRoutine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_routine" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_routine"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
