<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edActionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_action_description"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/duration_in_minutes"
        android:layout_marginBottom="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSaveAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_action"/>

</LinearLayout>
